imports/no-remote/forge-20260715/snapshots/39c8eda5b2e7aa63/2026-06-24_02-23-34-539595200.snap
name: CI
permissions:
  contents: read
  pull-requests: read

on:
  push:
    branches: [main, feature/*, bugfix/*, docs/*, release/*, hotfix/*]
  pull_request:
    branches: [main]


concurrency:
  group: ${{ github.workflow }}-${{ github.ref }}
  cancel-in-progress: true
jobs:
  test:
    runs-on: ubuntu-24.04
    steps:
      - uses: actions/checkout@v4 # v4.1.1

      - name: Setup Rust
        uses: dtolnay/rust-toolchain@3c5f7ea28cd621ae0bf5283f0e981fb97b8a7af9 # was: @master
        with:
          toolchain: stable

      - name: Cache cargo
        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
        with:
          path: |
            ~/.cargo/registry
            ~/.cargo/git
            target
          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}

      - name: Build
        run: cargo build --workspace --verbose

      - name: Run tests
        run: cargo test --workspace --verbose

  clippy:
    runs-on: ubuntu-24.04
    steps:
      - uses: actions/checkout@v4 # v4.1.1

      - name: Setup Rust
        uses: dtolnay/rust-toolchain@3c5f7ea28cd621ae0bf5283f0e981fb97b8a7af9
        with:
          toolchain: stable
          components: clippy

      - name: Cache cargo
        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9
        with:
          path: |
            ~/.cargo/registry
            ~/.cargo/git
            target
          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}

      - name: Run clippy
        run: cargo clippy --workspace --all-targets -- -D warnings

  fmt:
    runs-on: ubuntu-24.04
    steps:
      - uses: actions/checkout@v4 # v4.1.1

      - name: Setup Rust
        uses: dtolnay/rust-toolchain@3c5f7ea28cd621ae0bf5283f0e981fb97b8a7af9
        with:
          toolchain: stable
          components: rustfmt

      - name: Check formatting
        run: cargo fmt --all -- --check

  deny:
    runs-on: ubuntu-24.04
    steps:
      - uses: actions/checkout@v4 # v4.1.1

      - name: Setup Rust
        uses: dtolnay/rust-toolchain@3c5f7ea28cd621ae0bf5283f0e981fb97b8a7af9
        with:
          toolchain: stable

      - name: Install cargo-deny
        run: cargo install cargo-deny --locked

      - name: Run cargo-deny
        run: cargo deny check
        continue-on-error: true
